create child component

--- a/class02/index.html
+++ b/class02/index.html
@@ -10,8 +10,7 @@
   <body>
     <div id="app"> 
       <my-component></my-component>
-      <my-component></my-component>
-      <my-component></my-component> 
+      <child-component> </child-component>
     </div>
   </body>
 </html>
